--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@300;400;500;700&display=swap');
+
+body {
+    font-family: 'Ubuntu';
+}
+
 ul {
     list-style-type: none;
 }
@@ -329,7 +335,7 @@ header {
 
 footer {
     color: #57585a;
-    background: #fff;
+    background: #f0f1f2;
     padding: 3rem;
     display: grid;
     grid-template-columns: repeat(4, 300px);
@@ -339,9 +345,7 @@ footer {
 
 footer h3 {
     margin-bottom: 1.5rem;
-}
-
-footer a {
+    font-weight: 500;
 }
 
 .informacao ul, .navegacao ul{
@@ -372,4 +376,5 @@ footer a {
     gap: 1rem;
     margin: 0;
     padding: 0;
+    color: #71cc98;
 }
