--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&family=Ubuntu:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+
+:root {
+    --azul: #05386b;
+    --laranja: #f49b00;
+    --verde: #4af9b9;
+    --verde-claro: #97fcd7;
+    --roxo: #8907d3;
+    --bege: #edf5e1;
+    --bg-lilas: #788ace;
+    --bg-verde: #76aa9f;
+}
 
 body {
-    font-family: 'Ubuntu';
+    font-family: 'Montserrat';
 }
 
 ul {
@@ -17,16 +28,54 @@ figure img {
 }
 
 header {
+    position: fixed;
     margin: 0 auto;
     display: flex;
     justify-content: space-around;
     padding: 20px 0;
+    z-index: 100;
+    width: 100%;
+    background: var(--verde);
+    box-shadow: 0 3px 4px rgb(0 0 0 / 10%);
+    height: 4.5rem;
+}
+
+#header-content > nav > ul > li a {
+    color: var(--roxo);
+    font-weight: 500;
+}
+
+nav ul li {
+    position: relative;
+}
+
+nav > ul > li > a::before {
+    content: '';
+    border: 1px solid transparent;
+    height: 5px;
+    width: 100%;
+    top: -4px;
+    position: absolute;
+}
+
+nav > ul > li > a:hover::before {
+    content: '';
+    border: 1px solid var(--roxo);
+    background-color: var(--roxo);
+    height: 5px;
+    width: 100%;
+    top: -4px;
+    position: absolute;
+    transition: ease-in 0.2s;
 }
 
 #header-content {
     display: flex;
-    gap: 5rem;
+    justify-content: space-between;
+    margin: 0 5rem;
+    width: 100%;
     align-items: center;
+    height: 50px;
 }
 
 #header-content nav ul {
@@ -40,20 +89,24 @@ header {
 }
 
 .main-hero-container {
-    /* background: url("/img/arvores-parceiros.webp") no-repeat;
-    background-position: 50px 150px; */
-    padding-top: 3rem;
+    padding-top: 15vh;
     position: relative;
-    background-color: #71cc98;
+    background: rgb(118,170,159);
+    background: linear-gradient(90deg, rgba(118,170,159,1) 0%, rgba(120,138,206,1) 100%);
     color: #fff;
-    display: flex;
-    gap: 3rem;
+    display: grid;
+    grid-template-columns: 700px 650px;
+    grid-template-rows: 600px;
     justify-content: center;
-    flex-direction: row;
-    align-items: stretch;
+    justify-items: center;
+    font-weight: bolder;
 }
 
-.main-hero-container::before {
+.main-hero-right img {
+    height: 100%;
+}
+
+/* .main-hero-container::before {
     content: "";
     display: block;
     width: 230px;
@@ -85,113 +138,173 @@ header {
     bottom: auto;
     top: 20%;
     right: 0;
-}
+} */
 
 .main-hero-left {
-    max-width: 550px;
+    align-self: center;
+    width: 650px;
     padding: 1rem;
 }
 
 .main-hero-left-header h1 {
-    font-size: 2.4rem;
+    text-transform: uppercase;
+    line-height: 57px;
+    font-size: 2.6rem;
     font-weight: bold;
-    
 }
 
 .main-hero-left-header p {
-    font-size: 1.3rem;
+    font-size: 1rem;
+    font-weight: 100;
 }
 
 .main-hero-left-card h1 {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 2.3rem;
 }
 
-.main-hero-left-card p {
+.main-hero-left-card h5 {
+    margin: 3rem 0 0.8rem;
     font-size: 1.2rem;
-    font-weight: 300;
+    font-weight: 500;
 }
 
 .main-hero-left-card {
     max-width: 550px;
-    color: #80225f;
-    background-color: #fff;
-    padding: 2rem;
-    border-radius: 12px;
-    box-shadow: 0 2px 16px 0 rgb(32 33 36 / 40%);
+    color: #fff;
+    /* background-color: #fff; */
+    /* padding: 2rem; */
+    /* box-shadow: 0 2px 16px 0 rgb(32 33 36 / 40%); */
+    position: relative;
 }
 
+.main-hero-left-footer {
+    font-weight: 100;
+    font-size: 0.8rem;
+    position: absolute;
+    left: 93px;
+}
+
+.main-hero-left-footer img {
+    height: 25px;
+    margin: 10px 5px;
+}
+
+
 .main-hero-left-card input {
-    outline: none;
+    /* outline: none;
     width: 100%;
-    font-size: 16px;
-    line-height: 16px;
+    height: 60px;
+    font-size: 22px;
+    line-height: 24px;
     border-radius: 12px;
     border: 1px solid #c0c2c4;
-    padding: 0.75em 1em;
-    transition: box-shadow .2s ease,border-color .2s ease;
+    color: var(--azul);
+    padding: 0.75em 1rem;
+    transition: box-shadow .2s ease, border-color .2s ease; */
+    padding: 0.85rem 1rem;
+    color: var(--azul);
+    border: none;
+    width: 333px;
+    outline: 0;
+    font-weight: 700;
+    font-size: 1.25rem;
+    background: #fff;
+    border-radius: 22px;
+    line-height: 30px;
+    color: #333;
+    position: relative;
+    z-index: 9;
 }
 
 .main-hero-left-card button {
-    font-size: 20px;
+    /* font-size: 20px;
     outline: none;
     cursor: pointer;
     width: 100%;
-    color: #fff;
+    color: var(--bege);
     font-weight: 500;
-    background-color: #80225f;
+    background-color: var(--azul);
     padding: 0.5em 1em;
     border: none;
     border-radius: 12px;
     transition: background-color .2s ease;
-    margin-top: 0.75em;
-}
-
-.main-hero-left-footer {
+    margin-top: 0.75em; */
+    z-index: 10;
+    position: absolute;
+    margin-left: -57px;
+    background-color: var(--roxo);
+    border-color: #ffffff;
+    border-radius: 22px;
+    border-style: solid;
+    border-width: 1px;
+    color: #ffffff;
+    font-size: 14px;
+    line-height: 21px;
+    padding: 17px 40px;
     text-align: center;
-    padding: 1rem 0 0 0;
 }
 
-.main-hero-left-footer img {
-    height: 50px;
+.whatsapp-left img {
+    margin: 2rem 3rem;
+    height: 500px;
 }
 
-.main-hero-right {
-    display: flex;
-    justify-content: center;
-}
-
-.whatsapp-right img {
-    width: 70%  ;
+.whatsapp-left img:hover {
+    transform: scale(1.05);
+    transition: all 0.3s;
 }
 
 .whatsapp-container {
     display: grid;
-    grid-template-columns: 550px 550px;
+    grid-template-columns: 600px 600px;
+    grid-template-rows: 600px;
     justify-content: center;
     margin: 0 auto;
     padding: 3rem;
     margin-left: 9rem;
     background: #fff;
-    align-items: center;
 }
 
-.diferencial-lista-h2 h2, .whatsapp-left h2 {
-    font-size: 2.2rem;
-    color: #80225f;
+.whatsapp-right {
+    align-self: center;
 }
 
-.whatsapp-left p {
+.whatsapp-right h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #333;
+}
+
+.diferencial-lista-h2 h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #333;
+}
+
+.diferencial-lista-h2 {
+    justify-self: start;
+    margin: 0rem 0 2rem 0;
+    grid-column: 1/-1;
+}
+
+.diferencial-lista-h2 p {
+    font-size: 1.25rem;
+    color: #333;
+    
+}
+
+.whatsapp-right p {
     font-size: 1.25rem;
     color: #57585a;
-    margin: 1.25rem 0 ;
-    font-weight: 300;
+    margin: 1.25rem 0;
+    
 }
 
-.whatsapp-left a {
-    background-color: #80225f;
+.whatsapp-right a {
+    background-color: var(--roxo);
     color: #fff;
-    width: 100%;
+    /* width: 390px; */
     padding: 0.8rem 0;
     border-radius: 8px;
     text-decoration: none;
@@ -199,17 +312,11 @@ header {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    max-width: 450px;
+    max-width: 390px;
 }
 
-.whatsapp-left a span img {
+.whatsapp-right a span img {
     height: 20px;
-}
-
-.whatsapp-right {
-    display: grid;
-    justify-content: center;
-    justify-items: center;
 }
 
 .whatsapp-right-footer {
@@ -223,64 +330,331 @@ header {
 }
 
 #diferencial-section {
-    background: url("../img/arvores-parceiros.webp") no-repeat;
-    background-position: 0 100px;
-    background-color: #f0f1f2;
-    padding: 3rem;
+    position: relative;
+    /* background: url("../img/arvores-parceiros.webp") no-repeat; */
+    /* background: url("../img/green-background-2.jpg") no-repeat; */
+    /* background: url("../img/manage-money.svg") no-repeat; */
+    /* background-position: 0 100px; */
+    background-color: var(--verde-claro);
+    padding: 6rem 0;
 }
+
+/* .diferencial-lista::before {
+    content: '';
+    position: absolute;
+    top: 80px;
+    left: 100px;
+    filter: grayscale(1);
+    opacity: 0.2;
+    width: 300px;
+    height: 300px;
+    background: url('../img/contract.png') no-repeat;
+    background-size: 300px;
+}
+
+.diferencial-lista::after {
+    content: '';
+    position: absolute;
+    top: 80px;
+    right: 100px;
+    filter: grayscale(1);
+    opacity: 0.2;
+    width: 300px;
+    height: 300px;
+    background: url('../img/contract.png') no-repeat;
+    background-size: 300px;
+} */
 
 .diferencial-lista {
     display: grid;
-    grid-template-columns: 295px 295px 295px;
-    justify-content: center;    
-    gap: 2rem 5rem;
-}   
-
-.diferencial-lista-h2 {
-    justify-self: start;
-    margin: 0rem 0 2rem 2rem;
-    grid-column: 1/-1;
-}
-
-.diferencial-lista-h2 p {
-    font-size: 1.25rem;
-    color: #57585a;
-    font-weight: 300;
+    grid-template-columns: repeat(3, 360px);
+    justify-content: center;
+    gap: 2rem 4rem;
 }
 
 .diferencial-lista-item {
     display: grid;
-    grid-template-columns: 1fr;
-    justify-items: center;
+    gap: 0.5rem;
+    background-color: #fff;
+    padding: 5rem 1.8rem;
+    border-radius: 8px;
+    box-shadow: 0 3px 4px rgb(0 0 0 / 10%);
     text-align: center;
 }
 
+.diferencial-lista-item:hover {
+    box-shadow: 6px 8px 24px 0 rgb(32 47 57 / 20%);
+    transform: translateY(-10px);
+    transition: 0.3s ease-out all;
+}
+
 .diferencial-lista-item h3 {
-    font-size: 1.5rem;
+    font-size: 1.6rem;
+    color: var(--roxo);
+    font-weight: 700;
+}
+
+.diferencial-lista-item i {
+    margin-bottom: 1.5rem;
+    color: #333;
+    opacity: 0.8;
 }
 
 .diferencial-lista-item p {
-    font-weight: 300;
+    font-weight: 100;
 }
 
-.diferencial-lista-item img {
-    width: 100px;
+#ligue-ja div {
+    background-color: var(--roxo);
+    color: #fff;
+    padding: 2rem;
+    text-align: center;
+}
+
+#nossos-parceiros {
+    padding: 5rem 0;
+    display: grid;
+    grid-template-columns: calc((360*3px) + (4rem*2));
+    justify-content: center;
+}
+
+#nossos-parceiros div h2 {
+    text-align: left;
+    margin: 0 0 4rem 0;
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #333;
+}
+
+#nossos-parceiros div ul{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 2rem;
+    padding: 0;
+}
+
+
+#nossos-parceiros div ul li {
+    text-align: center;
+    border-radius: 8px;
+    background-color: #fff;
+    padding: 1.2rem 3.5rem;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 5px 0px;
+    border: 1px solid transparent;
+}
+
+#nossos-parceiros div ul li:hover {
+    border: 1px solid var(--roxo);
+    transform: scale(1.05);
+    transition: all .3s;
+}
+
+#nossos-parceiros div ul li:nth-child(3) {
+    padding-top: 30px;
+}
+
+
+#quem-somos {
+    /* background-color: #AD53E0; */
+    /* background-color: #C154FF; */
+    background: rgb(193,84,255);
+background: linear-gradient(326deg, var(--verde-claro) 0%, #5DD997 100%);
+    padding: 5rem 0 0;
+}
+
+.quem-somos{
+    display: grid;
+    grid-template-columns: 600px 600px;
+    grid-template-rows: 600px;
+    justify-content: center;
+    align-items: center;
+}
+
+#quem-somos div div h2 {
+    margin-bottom: 3rem;
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #333;
+}
+
+#quem-somos div div p {
+    font-size: 1.3rem;
+    align-self: center;
+    color: #333;
+    
+}
+
+#quem-somos div img {
+    height: 100%;
+}
+
+#ajuda {
+    padding: 5rem;
+    background-color: #f0f1f2;
+    display: grid;
+    grid-template-columns: calc((360*3px) + (4rem*2));
+    justify-content: center;
+}
+
+#ajuda div h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #333;
+}
+
+.faq-negociacao h3, .faq-empresa h3 {    
+    color: var(--roxo);
+    text-align: center;
+    font-size: 1.8rem;
+    line-height: 1.5;
+    font-weight: 700;
+}
+
+.faq-negociacao h3 {
+    margin: 1rem 0 1rem;
+}
+
+.faq-empresa h3 {
+    margin: 2rem 0 1rem;
+}
+
+#ajuda > div > p {
+    text-align: center;
+    font-size: 1.25rem;
+    color: #333;
+}
+
+#faq {
+    margin-top: 2rem;
+    display: grid;
+    grid-template-columns: 650px;
+    justify-content: center;
+}
+
+.accordion-header h5 {
+    color: #57585a;
+    font-size: 1.1rem;
+    line-height: 1.5;
+    font-weight: 700;
+}
+
+.accordion-body p, .accordion-body ul li {
+    font-size: 0.9rem;
+}
+
+.accordion-body p {
+    margin: 0.5rem 1rem;
+}
+
+.accordion-body ul li {
+    list-style-type: square;
+}
+
+.accordion-item {
+    margin: 1rem 0;
+    border: none;
+}
+
+#contato {
+    background: rgb(145,6,212);
+    background: linear-gradient(326deg, var(--bg-lilas) 0%, var(--bg-verde) 100%);
+    padding: 5rem 5rem 2rem 5rem;
+}
+
+#contato div {
+    display: grid;
+    grid-template-columns: 650px;
+    justify-content: center;
+    justify-items: center;   
+    margin-bottom: 2rem;
+}
+
+#contato div div h2 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+#contato div div p {
+    font-size: 1.25rem;
+    color: #fff;
+}
+
+#contato div form input, #contato div form textarea {
+    font-weight: 500;
+    color: var(--roxo);
+}
+
+
+
+#contato div form input:focus+label,  #contato div form textarea:focus+label{
+    color: var(--roxo);
+}
+
+
+.form-control {
+    border-radius: 8px;
+}
+
+.form-control::placeholder {
+    color: var(--azul);
 }
 
 #features {
     position: relative;
-    background-color:  #71cc98;
+    background-color: var(--roxo);
     display: grid;
     grid-template-columns: 295px 295px 295px;
-    justify-content: center;    
+    justify-content: center;
+    align-items: start;
     gap: 2rem 5rem;
     color: #fff;
     padding: 3rem;
 }
 
+#features div:nth-child(1) {
+    grid-column: 1/-1;
+}
+
+#features div:nth-child(1) div h2 {
+    margin: 0 0 0 2rem;
+    font-size: 2.2rem;
+    color: var(--bege);
+    justify-self: start;
+}
+
+#features div:nth-child(1) div p {
+    font-size: 1.25rem;
+    margin: 0 0 2rem 2rem;
+    color: var(--bege);
+    font-weight: 300;
+}
+
+.features-container-item h5 {
+    font-weight: 300;
+    color: var(--bege);
+}
+
+.features-container-item i {
+    margin-bottom: 1.5rem;
+    color: var(--verde-escuro);
+}
+
+/* #features div img {
+    width: 55px;
+} */
+
+/* #features div div {
+    background-color: #fff;
+    border-radius: 50% 50% 0px 50%;
+    border: 1px solid #fff;
+    padding: 1.5rem;
+} */
+
 .features-container-item {
     display: grid;
-    grid-template-rows: 100px 1fr 1fr;
+    grid-template-rows: 100px 1fr;
     align-items: center;
     justify-items: center;
     margin: 0;
@@ -291,67 +665,67 @@ header {
     font-size: 1.75rem;
 }
 
-.features-container-item p {
-    font-size: 1.2rem;
-}
-
-.features-container-item img {
-    width: 100px;
-}
-
-.features-container-item::before {
-    content: "";
-    display: block;
-    width: 140px;
-    background: url("../img/sinal.svg");
-    background-size: 20px;
-    background-repeat: repeat;
-    position: absolute;
-    height: 210px;
-    background-position: 50% center;
-    background-repeat: repeat;
-    left: auto;
-    bottom: auto;
-    top: 20%;
-    left: 0;
-}
-
-#features::after {
-    content: "";
-    display: block;
-    width: 140px;
-    background: url("../img/sinal.svg");
-    background-size: 20px;
-    background-repeat: repeat;
-    position: absolute;
-    height: 210px;
-    background-position: 50% center;
-    background-repeat: repeat;
-    left: auto;
-    bottom: auto;
-    top: 20%;
-    right: 0;
-}
-
 footer {
-    color: #57585a;
-    background: #f0f1f2;
+    background: #fff;
     padding: 3rem;
     display: grid;
-    grid-template-columns: repeat(4, 300px);
+    grid-template-columns: repeat(3, 300px);
     justify-items: center;
     justify-content: center;
+    position: relative;
+    box-shadow: 0 -3px 4px rgb(0 0 0 / 10%);
 }
 
+main {
+    position: relative;
+}
+
+.arrow-up {
+    text-align: center;
+    position: absolute;
+    margin-top: -27px;
+    margin-left: 50%;
+    z-index: 10;
+    background-color: var(--verde-claro);
+    color: #57585a;
+    border-radius: 50%;
+}
+
+.arrow-up i {
+    padding: 0.7rem 1.1rem;
+    
+}
+/* .arrow-up::after {
+    font-family: "Font Awesome 5 Free"; font-weight: 900; content: "\f0aa";
+    font-size: 4rem;
+    position: absolute;
+    color: var(--roxo);
+    background-color: #fff;    
+    padding: 2rem;
+    
+    top: -55px;
+    z-index: 2;
+} */
+
 footer h3 {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
+    font-size: 1.3rem;
+    font-weight: bolder;
+    color: var(--roxo);
+}
+
+footer span, footer ul, footer a{
+    color: rgb(87, 88, 90);
+    font-size: 1rem;
     font-weight: 500;
 }
 
-.informacao ul, .navegacao ul{
+.informacao ul,
+.navegacao ul {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding-left: 0;
 }
 
 .endereco {
@@ -371,9 +745,168 @@ footer h3 {
     margin: 0;
 }
 
+.endereco ul {
+    margin-top: 2rem;
+    display: flex;
+    gap: 1rem;
+}
+
+footer > div > ul > li > a:hover {
+    color: var(--verde);
+}
+
+footer > div.endereco > ul > li:hover {
+    color: var(--verde);
+    cursor: pointer;
+}
+
+div.arrow-up:hover {
+    background-color: var(--verde);
+    color: var(--roxo);
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
 .contato ul {
     display: flex;
     gap: 1rem;
     margin: 0;
     padding: 0;
 }
+
+.contact-form {
+    position: relative;
+    display: grid;
+    grid-template-columns: 550px 550px;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 3rem;
+    margin-left: 9rem;
+    align-items: start;
+}
+
+.creditos {
+    text-align: center;
+    padding: 0.5rem;
+    font-size: 0.9rem;
+    font-weight: 500;
+    background-color: #f1f1f1;
+    color: var(--roxo);
+}
+
+#contact div form input,
+#contact div form textarea {
+    color: var(--verde-escuro);
+}
+
+#contact div p {
+    font-size: 1.25rem;
+    margin-bottom: 3rem;
+    grid-column: 1/-1;
+    color: #57585a;
+    font-weight: 300;
+}
+
+#contact div form div label {
+    color: #57585a;
+}
+
+.btn {
+    padding: 0.75rem 3.5rem;
+    background-color: var(--roxo);
+    border: 1px solid var(--roxo);
+    border-radius: 8px;
+    font-weight: bold;
+    color: #fff;
+    margin-top: 0.5rem;
+}
+
+.btn:hover {
+    background-color: var(--verde);
+    border: 1px solid var(--verde);
+}
+
+.btn:focus {
+    background-color: var(--verde);
+    border: 1px solid var(--verde);
+}
+
+.row.g-3 {
+    display: grid;
+    grid-template-columns: 450px;
+    justify-items: center;
+}
+
+input:focus+label,
+input {
+    color: var(--verde-escuro);
+    font-weight: 100;
+}
+
+#contact div h2 {
+    font-size: 2.2rem;
+    color: var(--verde-escuro);
+}
+
+#contact div form {
+    grid-column: 2/3;
+}
+
+.contact-form img {
+    position: absolute;
+    max-width: 550px;
+    opacity: 0.9;
+    left: 20rem;
+    top: 4rem;
+}
+
+/* ANIMATIONS  */
+@keyframes T-animation-left {
+    0% {
+        transform: translateX(-20vh);
+    }
+}
+
+@keyframes T-animation-right {
+    0% {
+        transform: translateX(calc(20vh));
+    }
+}
+
+@keyframes T-animation-below {
+    0% {
+        transform: translateY(calc(20vh));
+    }
+}
+
+@keyframes T-animation-phone {
+    0% {
+        transform: translateX(calc(-20vh));
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+
+@media (prefers-reduced-motion: no-preference) {
+    .appears-from-right {
+        animation: T-animation-right 1s 1;
+    }
+
+    .appears-from-left {
+        animation: T-animation-left 1s 1;
+    }
+
+    .appears-from-below {
+        animation: T-animation-below 1s 1;
+    }
+
+    .animate-phone {
+        animation: T-animation-phone 2s 1;
+    }
+  }
+
